# design-doc

./: .gitignore  README.md  analyze_outputs.py  config.py  diffs.py  main.py  orchestrator.py  priority_plan.py  pyproject.toml  qa.py  run_io.py  top_orchestrator.py
crew/: agents.py  tasks.py
crew/config/: agents.yaml  tasks.yaml
inputs/: constraints.yaml  context.md  repo_manifest.txt
scripts/: analyze_outputs.sh  analyze_today_outputs.sh  clean_outputs.sh
templates/: adr.md  design_doc.md
tests/: test_analyze_outputs.py  test_crew_tasks.py  test_critique_architect_eval.py  test_orchestrator_priority_plan.py  test_priority_plan_validation.py  test_priority_planning_config.py  test_qa.py  test_run_io.py  test_tool_read_file.py  test_top_orchestrator.py
tools/: repo_reader.py
